@@ -6,33 +6,32 @@ import net.gobies.apothecary.config.CommonConfig;
 import net.gobies.apothecary.init.AEffects;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.PotionItem;
-import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.item.alchemy.PotionUtils;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.event.entity.player.ItemTooltipEvent;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.common.Mod;
+import net.minecraft.world.item.alchemy.PotionContents;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.neoforge.event.entity.player.ItemTooltipEvent;
 
 import java.util.List;
 
-@Mod.EventBusSubscriber(modid = Apothecary.MOD_ID, value = Dist.CLIENT, bus = Mod.EventBusSubscriber.Bus.FORGE)
+@EventBusSubscriber(modid = Apothecary.MOD_ID, value = Dist.CLIENT)
 public class ClientEvents {
 
     @SubscribeEvent
     public static void onRenderTooltip(ItemTooltipEvent event) {
         ItemStack stack = event.getItemStack();
-        Potion potion = PotionUtils.getPotion(stack);
-        List<MobEffectInstance> effects = PotionUtils.getMobEffects(stack);
-        if (stack.getItem() instanceof PotionItem && !effects.isEmpty()) {
+        PotionContents contents = stack.get(DataComponents.POTION_CONTENTS);
+        if (stack.getItem() instanceof PotionItem && contents != null && contents.hasEffects()) {
             if (ClientConfig.ENABLE_POTION_DESCRIPTIONS.get()) {
                 if (Screen.hasShiftDown()) {
-                    potion.getEffects().forEach(effect -> {
-                        String potionDescription = effect.getEffect().getDescriptionId();
+                    contents.forEachEffect(effect -> {
+                        String potionDescription = effect.getEffect().value().getDescriptionId();
                         event.getToolTip().add(Component.translatable(potionDescription + ".description").withStyle(ChatFormatting.GRAY));
                     });
                 } else {
@@ -40,21 +39,26 @@ public class ClientEvents {
                 }
             }
             if (ClientConfig.ADDITIONAL_POTION_TOOLTIPS.get()) {
-                MobEffectInstance effectInstance = effects.get(0);
-                int amplifier = effectInstance.getAmplifier();
-                MobEffect getEffect = effectInstance.getEffect();
+                contents.potion().ifPresent(potionHolder -> {
+                    if (!potionHolder.value().getEffects().isEmpty()) {
+                        MobEffectInstance effectInstance = potionHolder.value().getEffects().getFirst();
 
-                // Positive effects
-                if (getEffect == AEffects.Spelunker.get()) {
-                    int radius = 7 * (amplifier + 1);
-                    applyTooltips(event);
-                    event.getToolTip().add(4, (Component.literal("+" + radius + " Detection Radius").withStyle(ChatFormatting.BLUE)));
-                }
-                if (getEffect == AEffects.Thorns.get()) {
-                    int damageReflect = (int) (100 * CommonConfig.THORNS_DAMAGE_REFLECT.get() * (amplifier + 1));
-                    applyTooltips(event);
-                    event.getToolTip().add(4, (Component.literal("+" + damageReflect + "% Damage Reflect").withStyle(ChatFormatting.BLUE)));
-                }
+                        int amplifier = effectInstance.getAmplifier();
+                        MobEffect getEffect = effectInstance.getEffect().value();
+
+                        // Positive effects
+                        if (getEffect == AEffects.Spelunker.get()) {
+                            int radius = 7 * (amplifier + 1);
+                            applyTooltips(event);
+                            event.getToolTip().add(4, (Component.literal("+" + radius + " Detection Radius").withStyle(ChatFormatting.BLUE)));
+                        }
+                        if (getEffect == AEffects.Thorns.get()) {
+                            int damageReflect = (int) (100 * CommonConfig.THORNS_DAMAGE_REFLECT.get() * (amplifier + 1));
+                            applyTooltips(event);
+                            event.getToolTip().add(4, (Component.literal("+" + damageReflect + "% Damage Reflect").withStyle(ChatFormatting.BLUE)));
+                        }
+                    }
+                });
             }
         }
     }
