@@ -2,23 +2,23 @@ package net.gobies.apothecary.mixin;
 
 import net.gobies.apothecary.config.CommonConfig;
 import net.gobies.apothecary.util.AUtils;
+import net.minecraft.core.Holder;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.monster.Witch;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.projectile.ThrownPotion;
-import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.item.alchemy.PotionUtils;
+import net.minecraft.world.item.alchemy.PotionContents;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
-
-import java.util.Objects;
 
 @Mixin(Witch.class)
 public abstract class WitchMixin {
@@ -47,15 +47,15 @@ public abstract class WitchMixin {
 
                 if (apothecary$potionsThrown < CommonConfig.WITCH_POTION_COUNT.get()) {
                     RandomSource random = witch.getRandom();
-                    Potion selectedPotion = Potion.byName(AUtils.determinePotionByRarity(random));
+                    Holder<Potion> selectedPotion = BuiltInRegistries.POTION.getHolder(ResourceLocation.parse(AUtils.determinePotionByRarity(random))).orElse(null);
 
-                    if (selectedPotion != null && !player.hasEffect(selectedPotion.getEffects().get(0).getEffect())) {
+                    if (selectedPotion != null && !player.hasEffect(selectedPotion.value().getEffects().getFirst().getEffect())) {
                         ThrownPotion thrownPotion = new ThrownPotion(witch.level(), witch);
                         double d0 = player.getX() + player.getDeltaMovement().x - witch.getX();
                         double d1 = player.getEyeY() - (double) 1.1F - witch.getY();
                         double d2 = player.getZ() + player.getDeltaMovement().z - witch.getZ();
                         double d3 = Math.sqrt(d0 * d0 + d2 * d2);
-                        thrownPotion.setItem(PotionUtils.setPotion(new ItemStack(Items.SPLASH_POTION), Objects.requireNonNull(selectedPotion)));
+                        thrownPotion.setItem(PotionContents.createItemStack(Items.SPLASH_POTION, selectedPotion));
                         thrownPotion.setXRot(thrownPotion.getXRot() + 20.0F);
                         thrownPotion.shoot(d0, d1 + d3 * 0.2, d2, 0.75F, 8.0F);
                         if (!witch.isSilent()) {
